# auto-dialer

./: Cargo.toml  README.md
src/: generate_response.rs  main.rs  twilio.rs  upload.rs  utils.rs  ws_twilio.rs
src/vonage/: call.rs  mod.rs  websocket.rs
static/: index.html  script.js  style.css
tmp/: uploaded_file.csv
